--- a/src/hoc/Layer/Layer.css
+++ b/src/hoc/Layer/Layer.css
@@ -1,12 +1,9 @@
-.LayerContainer {
+.layer-container {
+  display: block;
   width: 100%;
-  height: max-content;
+  min-height: 100vh;
   background-color: black;
   padding: 2px;
   text-align: center;
-}
-.cent {
-  display: flex;
-  justify-content: center;
-  margin-top: 2rem;
+  align-content: center;
 }
