--- a/src/pages/home/Home.css
+++ b/src/pages/home/Home.css
@@ -1,13 +1,18 @@
-.HomeContainer {
-  display: inline-flex;
-  justify-content: center;
-  height: max-content;
-  padding: 5px;
-  margin-top: 1vw;
-  width: 80%;
-  background-color: #202020;
+.home-container {
+  display: inline-block;
+  padding-top: 80px;
+  min-width: 80%;
+  min-height: 95vh;
+  padding: 20;
+  background-color: none;
   border: none;
 }
 p {
   color: white;
+}
+
+@media (max-width: 600px) {
+  .home-container {
+    padding-top: 40px;
+  }
 }
