--- a/src/components/Navbar/Navbar.css
+++ b/src/components/Navbar/Navbar.css
@@ -9,6 +9,15 @@
   width: 70%;
   padding: 5px;
 }
+.set-lang {
+  padding: none;
+  border: none;
+  align-content: center;
+  background-color: #202020;
+  width: 40px;
+  height: 25px;
+  cursor: pointer;
+}
 .nav-spacer {
   width: 80%;
 }
@@ -29,9 +38,9 @@
   padding: 5px;
   text-decoration: none;
 }
-.navLink:hover {
+
+.nav-link-element:hover {
   background-color: white;
-  opacity: 0.5;
   color: black;
 }
 @media (max-width: 600px) {
